# pallas-solver

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md  annotated.html  basinhopping_8h__incl.map  basinhopping_8h__incl.md5  basinhopping_8h_a7756bff6b7e1652d05205e0c4e2a393f_cgraph.dot  basinhopping_8h_a7756bff6b7e1652d05205e0c4e2a393f_cgraph.md5  basinhopping_8h_source.html  brute_8h.html  brute_8h__incl.dot  brute_8h__incl.map  brute_8h__incl.md5  brute_8h_af68f0ba83e9062130cffdf5b06ccd09c_cgraph.md5  brute_8h_source.html  class_rosenbrock.html  class_rosenbrock__coll__graph.map  classes.html  classpallas_1_1_basinhopping-members.html  classpallas_1_1_basinhopping.html  classpallas_1_1_basinhopping_ad896094bfbc1e17c259bc6d870325c1e_icgraph.dot  classpallas_1_1_boltzmann_cooling.html  classpallas_1_1_boltzmann_cooling__coll__graph.map  classpallas_1_1_bounded_step_function-members.html  classpallas_1_1_bounded_step_function.html  classpallas_1_1_bounded_step_function__coll__graph.dot  classpallas_1_1_bounded_step_function__inherit__graph.map  classpallas_1_1_brute-members.html  classpallas_1_1_brute_ac9007f37082c2db611196fdd367c132b_icgraph.md5  classpallas_1_1_cauchy_cooling-members.html  classpallas_1_1_cauchy_cooling.html  classpallas_1_1_cauchy_cooling__inherit__graph.dot  classpallas_1_1_cooling_schedule-members.html  classpallas_1_1_cooling_schedule.html  classpallas_1_1_cooling_schedule__inherit__graph.dot  classpallas_1_1_cooling_schedule__inherit__graph.md5  classpallas_1_1_cooling_schedule_a0c22fb0f61b33a64d89e64ff823b7315_icgraph.dot  (+283 more)
docs/: header.html
docs/html/: annotated.html  bootstrap.css  (+401 more)
examples/: CMakeLists.txt  brute_rosenbrock.cc  history_output_example.cc  simulated_annealing_rosenbrock.cc
search/: all_13.js  all_4.js  all_5.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_5.js  classes_7.js  classes_9.js  files_0.js  files_2.js  functions_1.js  functions_4.js  functions_6.js  functions_7.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  variables_6.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
(+54 files in other folders)
