add_executable(basinhopping_rosenbrock basinhopping_rosenbrock.cc)
target_link_libraries(basinhopping_rosenbrock pallas)

add_executable(simulated_annealing_rosenbrock simulated_annealing_rosenbrock.cc)
target_link_libraries(simulated_annealing_rosenbrock pallas)

add_executable(brute_rosenbrock brute_rosenbrock.cc)
target_link_libraries(brute_rosenbrock pallas)

add_executable(differential_evolution_rosenbrock differential_evolution_rosenbrock.cc)
target_link_libraries(differential_evolution_rosenbrock pallas)